Refatoração de entidades.

--- a/src/main/webapp/concurso_edit.xhtml
+++ b/src/main/webapp/concurso_edit.xhtml
@@ -35,7 +35,7 @@
 
 			<p:fieldset legend="#{messages['concurso.label']}" toggleable="true"
 				toggleSpeed="500">
-				<h:panelGrid id="fields" columns="1">
+				<h:panelGrid id="fields" columns="3">
 
 					<h:outputLabel value="#{messages['concurso.label.numero']}: "
 						for="numero" styleClass="text-input" />
@@ -43,9 +43,16 @@
 						title="#{messages['concurso.alt.numero']}" />
 					<p:message for="numero" />
 
+					<h:outputText value="#{messages['concurso.label.dezenas']}: " />
+					<p:selectManyCheckbox value="#{concursoEditMB.dezenasSelecionadas}" id="dezenas"
+						layout="pageDirection" converter="javax.faces.Integer">
+						<f:selectItems value="#{concursoEditMB.dezenaSelectItems}" />									
+					</p:selectManyCheckbox>
+					<p:message for="dezenas" />
+
 				</h:panelGrid>
 
-			</p:fieldset>		
+			</p:fieldset>
 
 		</h:form>
 	</ui:define>
