Refatoração de entidades e implementação de domínio para resultados.

--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -6,11 +6,10 @@
 
 	<h:form>
 		<p:menubar>
-			<p:submenu label="#{messages['menu.bookmark']}">
-				<p:menuitem value="#{messages['menu.menuitem.new']}"
-					url="/bookmark_edit.jsf" />
+
+			<p:submenu label="#{messages['menu.dezena']}">
 				<p:menuitem value="#{messages['menu.menuitem.list']}"
-					url="/bookmark_list.jsf" />
+					url="/dezena_list.jsf" />
 			</p:submenu>
 
 			<p:submenu label="#{messages['menu.concurso']}">
@@ -20,9 +19,16 @@
 					url="/concurso_list.jsf" />
 			</p:submenu>
 
-			<p:submenu label="#{messages['menu.dezena']}">
+			<p:submenu label="#{messages['menu.bilhete']}">
+				<p:menuitem value="#{messages['menu.menuitem.new']}"
+					url="/bilhete_edit.jsf" />
 				<p:menuitem value="#{messages['menu.menuitem.list']}"
-					url="/dezena_list.jsf" />
+					url="/bilhete_list.jsf" />
+			</p:submenu>
+
+			<p:submenu label="#{messages['menu.resultado']}">
+				<p:menuitem value="#{messages['menu.menuitem.list']}"
+					url="/resultado.jsf" />
 			</p:submenu>
 
 			<p:menuitem value="#{messages['menu.menuitem.quit']}"
