--- a/src/main/webapp/concurso_list.xhtml
+++ b/src/main/webapp/concurso_list.xhtml
@@ -49,7 +49,7 @@
 
 				<p:column>
 					<f:facet name="header">#{messages['concurso.label.dezenas']}</f:facet>					
-						<h:outputText value="#{bean.dezenas}" />										
+						<h:outputText value="#{bean.dezenas}" converter="br.com.bottossi.loteria.view.converter.DezenaConverter" />										
 				</p:column>
 
 			</p:dataTable>
